--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="relative bg-cover bg-center bg-no-repeat py-32 text-center text-white"
-  style="background-image: url('/images/hero-bg.jpg');">
+  style={`background-image: url('${import.meta.env.BASE_URL}images/hero-bg.jpg');`}>
   <!-- 半透明黑色遮罩层 -->
   <div class="absolute inset-0 bg-black/40"></div>
 
