--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -5,7 +5,7 @@
 <section 
   id="quote" 
   class="relative py-16 md:py-20 text-white text-center bg-cover bg-center" 
-  style="background-image: url('/images/quote.JPG');"
+  style={`background-image: url('${import.meta.env.BASE_URL}images/quote.JPG');`}
 >
   <!-- 半透明遮罩层 -->
   <div class="absolute inset-0 bg-black/50"></div>
