--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -1,12 +1,13 @@
 ---
+const baseUrl = import.meta.env.BASE_URL || '/';
 const images = [
-  '/images/hotel1.PNG',
-  '/images/hotel2.PNG',
-  '/images/hotel3.PNG',
-  '/images/hotel4.PNG',
-  '/images/hotel5.PNG',
-  '/images/hotel6.PNG',
-  '/images/hotel7.PNG',
+  `${baseUrl}images/hotel1.PNG`,
+  `${baseUrl}images/hotel2.PNG`,
+  `${baseUrl}images/hotel3.PNG`,
+  `${baseUrl}images/hotel4.PNG`,
+  `${baseUrl}images/hotel5.PNG`,
+  `${baseUrl}images/hotel6.PNG`,
+  `${baseUrl}images/hotel7.PNG`,
 ];
 ---
 
