--- a/src/components/Partners.astro
+++ b/src/components/Partners.astro
@@ -11,23 +11,23 @@
       <div class="inline-block animate-scroll">
         <!-- 滚动内容：一行写完或 <span> 包裹避免换行空格 -->
         <span>
-          <img src="/images/Saudi-flag.png" alt="Saudi" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Indonesia-flag.png" alt="Indonesia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Malaysia-flag.png" alt="Malaysia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Kazakhstan-flag.png" alt="Kazakhstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Kyrgyzstan-flag.png" alt="Kyrgyzstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Uzbekistan-flag.png" alt="Uzbekistan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Thailand-flag.png" alt="Thailand" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Saudi-flag.png`} alt="Saudi" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Indonesia-flag.png`} alt="Indonesia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Malaysia-flag.png`} alt="Malaysia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Kazakhstan-flag.png`} alt="Kazakhstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Kyrgyzstan-flag.png`} alt="Kyrgyzstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Uzbekistan-flag.png`} alt="Uzbekistan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Thailand-flag.png`} alt="Thailand" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
         </span>
         <!-- 第二份 -->
         <span>
-          <img src="/images/Saudi-flag.png" alt="Saudi" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Indonesia-flag.png" alt="Indonesia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Malaysia-flag.png" alt="Malaysia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Kazakhstan-flag.png" alt="Kazakhstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Kyrgyzstan-flag.png" alt="Kyrgyzstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Uzbekistan-flag.png" alt="Uzbekistan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
-          <img src="/images/Thailand-flag.png" alt="Thailand" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Saudi-flag.png`} alt="Saudi" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Indonesia-flag.png`} alt="Indonesia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Malaysia-flag.png`} alt="Malaysia" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Kazakhstan-flag.png`} alt="Kazakhstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Kyrgyzstan-flag.png`} alt="Kyrgyzstan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Uzbekistan-flag.png`} alt="Uzbekistan" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
+          <img src={`${import.meta.env.BASE_URL}images/Thailand-flag.png`} alt="Thailand" class="inline-block w-20 h-20 rounded-full object-cover mx-4" />
         </span>
       </div>
     </div>
