--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 ---
 
 <html lang="en">
@@ -6,8 +7,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dragon Umrah</title>
-    <!-- 全局样式 -->
-    <link rel="stylesheet" href="/src/styles/global.css" />
   </head>
   <body class="bg-black text-white font-sans">
     <slot />
